<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/mainCreateTaskLayout"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/layoutMain"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
      android:id="@+id/tbCreateEdit"
      android:minHeight="?attr/actionBarSize"  
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:titleTextColor="@android:color/white"
      android:background="@color/lightgreen">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:orientation="horizontal" >
    </LinearLayout>




    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:singleLine="false" 
        android:lines="3"
        android:layout_height="wrap_content"
        android:ems="10" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:orientation="horizontal" >
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:orientation="horizontal" >
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStartTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/start_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvStartTimeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="right"
            android:text="hh:mm dd:MM:yyyy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:orientation="horizontal" >
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvEndTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/end_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvEndTimeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="right"
            android:text="dd:MM:yyyy hh:mm "
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:orientation="horizontal" >
    </LinearLayout>
    
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSpentTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spent_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvSpentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="hh:mm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:orientation="horizontal" >
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvAutoFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/auto_finish_after"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etAutoFinishMinutes"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10" />

        <TextView
            android:id="@+id/tvMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:orientation="horizontal" >
        </LinearLayout>


    <!--Is Periodic-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isperiodic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/cbIsPeriodic" />


        <EditText
            android:id="@+id/etPeriodicHours"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"
            android:ems="10" />

        <TextView
            android:id="@+id/tvHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/hours"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:orientation="horizontal" >
        </LinearLayout>


        <!--     <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:text="@string/exit" />

            </LinearLayout> -->

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
    android:id="@+id/fabVoiceHeader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchor="@id/etHeader"
    app:layout_anchorGravity="bottom|right|end"
    app:backgroundTint="@color/lightgreen"
    android:src="@drawable/voice" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabVoiceComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/etComment"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="@color/lightgreen"
        android:src="@drawable/voice" />

</android.support.design.widget.CoordinatorLayout>